tests/frontend/pass/array/array_exp_rewrite.act
contract A

constructor()

creates

  uint[3][2][2] x := [ [ [0,0,0], [0,0,0] ], [ [0,0,0], [0,0,0] ] ]
  uint[3][2][2][1] y := [ [ [ [0,0,0], [0,0,0] ], [ [0,0,0], [0,0,0] ] ] ]

transition f()

storage

  x[1] := y[0][1]
